Fixes some spacing issues found while making cookbook recipes.

--- a/less/typography.less
+++ b/less/typography.less
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5, h6, section {
     footer + &,
     header + &,
     hr + &,
-    nav + &,
+    img + &,
     ol + &,
     p + &,
     pre + &,
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5, h6, section {
     & + footer,
     & + header,
     & + hr,
-    & + nav,
+    & + img,
     & + ol,
     & + p,
     & + pre,
@@ -112,7 +112,7 @@ h1, h2, h3, h4, h5, h6, section {
     footer,
     header,
     hr,
-    nav,
+    img,
     ol,
     p,
     pre,
@@ -150,6 +150,7 @@ figure,
 footer,
 header,
 hr,
+img,
 nav,
 ol,
 p,
